--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,13 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <plugin>
@@ -44,6 +51,11 @@
                     <descriptors>
                         <descriptor>src/main/assembly/assembly.xml</descriptor>
                     </descriptors>
+                    <archive>
+                        <manifest>
+                            <mainClass>cn.hello.a.AApplication</mainClass>
+                        </manifest>
+                    </archive>
                 </configuration>
                 <executions>
                     <execution>
@@ -58,5 +70,19 @@
         </plugins>
     </build>
 
+    <distributionManagement>
 
+        <repository>
+            <id>releases</id>
+            <name>releases</name>
+            <url>http://localhost:9000/repository/maven-releases/</url>
+        </repository>
+
+        <snapshotRepository>
+            <id>snapshots</id>
+            <name>snapshots</name>
+            <url>http://localhost:9000/repository/maven-snapshots/</url>
+        </snapshotRepository>
+
+    </distributionManagement>
 </project>
